# pingpong-slackbot

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  deploy.sh  index.js  manifest.yaml  mypy.ini  newrelic.ini  package-lock.json  package.json  pingpongbot.py  pyproject.toml  requirements.txt  run.py  server.py  slackbot.py  test.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: CustomSpinner.vue  PingPongMain.vue
frontend/src/router/: index.js
pingpong/: Player.py  cdf_backend.py  data_classes.py  db_services.py  helpers.py  main.py  models.py  pingpong_service.py  responses.py  slack_services.py  slackbot.py  util.py
pingpong-slackbot/: User.py  pingpongbot.py
pingpong/models/: Player.py
pingpong/services/: db_services.py
pingpong/utils/: helpers.py
src/: cdf_backend.py  constants.py  db.py  models.py  pingpong_service.py  responses.py  server.py  slackbot.py
src/backend/: backend.py  backend_cdf.py  backend_in_memory.py  data_classes.py  rating.py  util.py
src/pingpong/: main.py  pingpong_service.py  responses.py  slackbot.py
src/services/: db_services.py
src/tests/test_backend/: test_backend.py  test_rating.py
src/tests/test_pingpong/: test_pingpong_slackbot.py
tests/: conftest.py  test_db_services.py  test_slackbot.py
