[tool.poetry]
name = "pingpong-slackbot"
version = "0.1.0"
description = ""
authors = ["Erlend Vollset <erlend.vollset@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.7"
slack-sdk = "^3.11.2"
cognite-sdk-core = "^2.32.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
